# Gnuradio_CustomFileSink

./: CMakeLists.txt  MANIFEST.md  build.sh
.conda/: README.md
.conda/recipe/: meta.yaml
apps/: CMakeLists.txt
cmake/Modules/: gnuradio-advFileConfig.cmake
docs/: CMakeLists.txt  README.advFile
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: CMakeLists.txt  advFile_customFileSink.block.yml
include/gnuradio/advFile/: CMakeLists.txt  api.h
lib/: CMakeLists.txt
python/advFile/: CMakeLists.txt  __init__.py  customFileSink.py
python/advFile/bindings/: CMakeLists.txt
